fix: overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,18 @@
 @tailwind utilities;
 
 .background-gradient {
-  background: radial-gradient(
-    circle at top center,
-    hsla(222, 80%, 60%, 0.5) 0%,
-    hsla(222, 0%, 0%, 0) 50%,
-    hsla(222, 0%, 0%, 0) 100%
-  );
+  background: radial-gradient(at 27% 37%, hsla(0, 0%, 100%, 0.4) 0px, transparent 50%), 
+    radial-gradient(at 97% 21%, hsla(0, 0%, 100%, 0.2) 0px, transparent 50%), 
+    radial-gradient(at 52% 99%, hsla(0, 0%, 100%, 0.3) 0px, transparent 50%), 
+    radial-gradient(at 10% 29%, hsla(0, 0%, 100%, 0.2) 0px, transparent 50%), 
+    radial-gradient(at 97% 96%, hsla(0, 0%, 100%, 0.1) 0px, transparent 50%), 
+    radial-gradient(at 33% 50%, hsla(0, 0%, 100%, 0.2) 0px, transparent 50%), 
+    radial-gradient(at 79% 53%, hsla(0, 0%, 100%, 0.3) 0px, transparent 50%);
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  filter: blur(100px) saturate(150%);
+  top: 80px;
+  opacity: 0.15; /* Anda bisa menaikkan nilai ini agar lebih terang */
 }
